--- a/src/components/FaceRecognition/FaceRecognition.css
+++ b/src/components/FaceRecognition/FaceRecognition.css
@@ -1,4 +1,9 @@
-.bounding_box {
+.FaceRecognition-container {
+    display: grid;
+    justify-content: space-around;
+}
+
+.FaceRecognition-bounding_box {
     position: absolute;
     border: 0.3px solid #149df2;
     display: flex;
@@ -9,14 +14,13 @@
 
 .FaceRecognition-div {
     position: relative;
-    top: 100px;
-    
+    top: 20px;
 }
 
-.FaceRecognition-div img {
+.FaceRecognition-container img {
     border-radius: 10px;
     box-sizing: content-box;
-    width: 600px;
-    height: 350px;
-    border: 3px solid #464646;
+    width: 550px;
+    height: auto;
+    border: 1px solid #464646;
 }
