--- a/src/components/ImageLinkForm/ImageLinkForm.css
+++ b/src/components/ImageLinkForm/ImageLinkForm.css
@@ -1,16 +1,42 @@
 .ImageLink-container {
     display: grid;
     justify-content: center;
-    display: grid;
-    justify-content: center;
     width: 100vw;
     height: 100px;
 }
 
-.ImageLink-pattern {
-    background-color:#464646;
-    background-image: radial-gradient(white 15%, transparent 16%),
-    radial-gradient(white 15%, transparent 16%);
-    background-size:60px 60px;
-    background-position: 0 0, 30px 30px;
+.ImageLink-p1 {
+    font-size: 20px;
+    color: #999;
+}
+.ImageLink {
+    display: grid;
+    justify-content: center;
+}
+
+.ImageLink input {
+    width: 310px;
+    height: 30px;
+    border: none;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    outline: none;
+    color: #999;
+    background: rgba(51, 51, 51, 0.7);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+
+}
+
+.ImageLink button {
+    width: 95px;
+    height: 30px;
+    border: none;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    background: rgba(255, 136, 0, 1);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);  
+}
+
+img {
+    border-radius: 5px;
 }
